[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Player/PlayerHead.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/spitRightCowboy.png" type="Texture" id=2]
[ext_resource path="res://Assets/Audio/laserShoot (2).wav" type="AudioStream" id=3]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color    = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true) {
		new_color = white_color;
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/active = false

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Shoot"
length = 0.28
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2, 0.22, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[node name="PlayerHead" type="Position2D"]
script = ExtResource( 1 )

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 9, -4 )

[node name="Head" type="Sprite" parent="."]
material = SubResource( 5 )
position = Vector2( 2, -8 )
texture = ExtResource( 2 )
hframes = 14
frame = 12

[node name="HeadAnimation" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/RESET = SubResource( 3 )
anims/Shoot = SubResource( 2 )

[node name="SpitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="animation_finished" from="HeadAnimation" to="." method="_on_HeadAnimation_animation_finished"]
